# epi-polar

./: .gitignore  README.md
EpipolarConsistency-build/: CMakeLists.txt
EpipolarConsistency-build/code/LibEpipolarConsistency/: CMakeLists.txt
EpipolarConsistency-build/code/LibSimple/: CMakeLists.txt
EpipolarConsistency-build/code/LibUtilsCuda/: CMakeLists.bak
EpipolarConsistency-build/tools/FDCTMotionCorrection/: CMakeLists.txt
EpipolarConsistency-dev/: CMakeLists.txt
EpipolarConsistency-dev/code/LibEpipolarConsistency/: EpipolarConsistency.cpp  EpipolarConsistencyRadonIntermediate.cpp
EpipolarConsistency-dev/code/LibGeometryCalibration/: CMakeLists.txt
EpipolarConsistency-dev/code/LibProjectiveGeometry/: ProjectiveGeometry.hxx
EpipolarConsistency-dev/code/LibRayCastBackproject/: CMakeLists.txt
EpipolarConsistency-dev/code/LibSimple/: SimpleQTGL.cpp  SimpleQTGL.h
EpipolarConsistency-dev/code/LibUtilsCuda/: CMakeLists.txt  CudaMemory.h
EpipolarConsistency-dev/code/LibUtilsQt/: CMakeLists.txt  FigureWindow.h  QGLPlot3D.h
EpipolarConsistency-dev/tools/FDCTCalibrationCorrection/: CMakeLists.txt  FDCTCalibrationCorrection.cpp
EpipolarConsistency-dev/tools/FluoroTracking/: CMakeLists.txt
EpipolarConsistency-dev/tools/TrajectoryView/: CMakeLists.txt
EpipolarConsistency-dev/tools/VolumeRendering/: CMakeLists.txt
LibGetSet-build/GetSetGui/: CMakeLists.txt
LibGetSet-dev/: CMakeLists.txt  GetSetConfig.cmake
LibGetSet-dev/Apps/: CMakeLists.txt
LibGetSet-dev/GetSet/: CMakeLists.txt  GetSetCmdLine.hxx  GetSetIO.h  GetSetInternal.h  GetSetScripting.h  GetSet_impl.hxx  StringConversion.hxx  StringHexData.hxx  StringType.hxx  StringUtil.hxx
LibGetSet-dev/GetSetGui/: GetSetGui.cpp  GetSetGui.h  GetSetModalDialog.cpp  GetSetModalDialog.h  GetSetProgressWindow.cpp  GetSetScriptEdit.cpp  GetSetScriptEdit.h  GetSetTabWidget.cpp  GetSetTabWidget.h  GetSetWidget.cpp  GetSetWidget.h
LibGetSet-org/: README.md
MATLAB-dev/: ecc_demo.m
MATLAB-dev/ecc_demo_data/: projections.ompl
MATLAB-org/: readme.md
MATLAB-org/ecc_demo_data/pumpkin/: README.txt  projections.ompl
Octave-dev/: readme.md
Octave-org/: readme.md
Octave-org/ecc_demo_data/: HowTo.txt
